--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -59,6 +59,8 @@
 \usepackage{mathrsfs}
 \usepackage{amsmath}
 \usepackage{soul}
+%\usepackage[normalem]{ulem}
+%\newcommand{\stkout}[1]{\ifmmode\text{\sout{\ensuremath{#1}}}\else\sout{#1}\fi}
 
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Command to make the lines in the title page
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
@@ -1753,8 +1755,39 @@ John also mentioned two good techniques, that should be noted:
   \end{itemize}
 \item[\done]{Complete \tss{152}Eu count}
 \item[\done]{Start background (make sure things are okay)}
-\item{Transfer $\boxed{closet}$ into glovebox}
-\item{-}
+\end{todolist}
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Monday, 7 November 2016}
+
+
+\experiment{Cycle_X3_round_2}
+
+\begin{todolist}
+\item[\done]{Finish background count}
+\item[\done]{Practice transfer with 300 $\mu$l.}
+  \begin{itemize}
+  \item{A little frustrating}
+  \item{Take a lunch break for headache, maybe second
+    practice will go better}
+  \item{Settled on 400 $\mu$l instead of 500 $\mu$l or 300 $\mu$l (
+    happy medium)}
+  \end{itemize}
+\item[\done]{Create and label vials $\boxed{8}$, $\boxed{9}$,
+  $\boxed{10}$, and $\boxed{Buddy}$, to hold stock solution.
+  Did not leech them,
+  hopefully barium contamination wont be a huge deal,
+  we will assume all the data for Cs can be gathered from \tss{133}Cs.
+  also, still using smaller vials, but will make sure to have
+  double containment for transfer into glovebox}
+\item[\done]{Create $\boxed{Buddy}$ with \st{0.5} 0.4 (removed 0.1) ml of 4 M HNO\tsbs{3}
+  solution}
+\item[\done]{Put $\boxed{Buddy}$ inside a 15 ml vial, parafilm wrap}
+\item[\done]{-}
 \end{todolist}
 \begin{center}
     0.149+/-0.011 ml of 15.43+/-0.06 M HNO\tsbs{3} $\boxed{Stock\ HNO_3}$\\
@@ -1765,7 +1798,10 @@ John also mentioned two good techniques, that should be noted:
   solution $\boxed{\rightarrow Stock\ Add}$ (glass container)
 \end{center}
 \begin{todolist}
-\item{-}
+\item[\done]{Parafilm wrap $\boxed{Stock\ Add}$}
+\item[\done]{Transfer $\boxed{Stock\ Add}$, $\boxed{8}$, $\boxed{9}$,
+  $\boxed{10}$, $\boxed{Buddy}$, and $\boxed{closet}$ to glove box, (with additional 15 ml vials for containers that will need them)}
+\item[\done]{-}
 \end{todolist}
 \begin{center}
 Combine 0.500+/-0.005 ml of 15.43+/-0.06 M HNO\tsbs{3}
@@ -1782,39 +1818,60 @@ $\boxed{\rightarrow Stock\ Add}$
 \item{-}
 \end{todolist}
 \begin{center}
-Combine 2.500+/-0.025 ml of 4.00+/-0.05 M HNO\tsbs{3} solution.
-$\boxed{Stock\ Add}$\\
-+\\
-0.700+/-0.028 ml of 4.00+/-0.05 M HNO\tsbs{3} solution
-$\boxed{Stock}$
+\st{Combine 2.500+/-0.025 ml of 4.00+/-0.05 M HNO}\tsbs{3}\st{ solution.
+$\boxed{Stock\ Add}$}\\
+\st{+}\\
+\st{0.700+/-0.028 ml of 4.00+/-0.05 M HNO}\tsbs{3}\st{ solution
+$\boxed{Stock}$}
 \\
-=\\
-3.2+/-0.038 ml of 4.00+/-0.05 M HNO\tsbs{3} solution.
-$\boxed{\rightarrow Stock}$
+\st{=}\\
+\st{3.2+/-0.038 ml of 4.00+/-0.05 M HNO}\tsbs{3}\st{ solution.
+  $\boxed{\rightarrow Stock}$}
+\begin{itemize}
+\item{A problem...I am not sure how this happened, and I kind of
+  don't want to bring it up, but I was able to get only,
+  400 $\mu$l out of $\boxed{Stock}$, I would expect to get
+  690 $\mu$l out of $\boxed{Stock}$..where did 290 $\mu$l go?
+  Did it evaporate? Do we need to parafilm wrap it?}
+\item{As a precaution, I will parafilm wrap it}
+\end{itemize}
 \end{center}
 \begin{todolist}
-\item{Transfer $\boxed{closet}$ out of glovebox}
-\item{Create $\boxed{Buddy}$ with 4 ml of 4 M HNO\tsbs{3}
-     solution}
-\item{Create and label vials $\boxed{8}$, $\boxed{9}$,
-  $\boxed{10}$, and $\boxed{Buddy}$, to hold stock solution.
-  Did not leech them,
-  hopefully barium contamination wont be a huge deal,
-  we will assume all the data for Cs can be gathered from \tss{133}Cs.
-  also, still using smaller vials, but will make sure to have
-  double containment for transfer into glovebox}
-\item{Transfer 0.5 ml of $\boxed{Stock}$ to $\boxed{8}$}
-\item{Transfer 0.5 ml of $\boxed{Stock}$ to $\boxed{9}$}
-\item{Transfer 0.5 ml of $\boxed{Stock}$ to $\boxed{10}$}
-\item{Add scoop of sodium nitrite to $\boxed{8}$}
-\item{Add scoop of sodium nitrite to $\boxed{9}$}
-\item{Add scoop of sodium nitrite to $\boxed{10}$}
-\item{Centrifuged $\boxed{8}$, $\boxed{9}$
+\item[\done]{Transfer 400 $\mu$l $\boxed{Stock}$ to $\boxed{Stock\ Add}$}
+  \begin{itemize}
+  \item{Also switched caps (because aluminum foil cap was removed on
+    $\boxed{Stock}$ and I liked having it off)}
+  \end{itemize}
+\item[\done]{Transfer $\boxed{closet}$ out of glovebox}
+\item[\done]{Transfer $\boxed{closet}$ to rad closet}
+\item[\done]{Transfer 0.4 ml of $\boxed{Stock\ Add}$ to $\boxed{8}$}
+\item[\done]{Transfer 0.4 ml of $\boxed{Stock\ Add}$ to $\boxed{9}$}
+\item[\done]{Transfer 0.4 ml of $\boxed{Stock\ Add}$ to $\boxed{10}$}
+\item[\done]{Add scoop of sodium nitrite to $\boxed{8}$}
+\item[\done]{Add scoop of sodium nitrite to $\boxed{9}$}
+\item[\done]{Add scoop of sodium nitrite to $\boxed{10}$}
+\item[\done]{Put $\boxed{8}$, $\boxed{9}$, and $\boxed{10}$ into
+  15 ml centrifuge tubes}
+\item[\done]{Centrifuged $\boxed{8}$, $\boxed{9}$
   and $\boxed{10}$ to push all solution to
   botttom of vials}
-\item{Start count of $\boxed{8}$ noticed bubbles in solution,
-  might have to recount - left overnight}
+\item[\done]{Fixed shielding on detector}
+  \begin{itemize}
+  \item{Retake background and efficiency count}
+  \end{itemize}
+\item{Note when \tss{137}Cs will be floating around lab}
+  \begin{itemize}
+  \item{T, Th 1-4 pm, and Wed 2-5, this week and next week}
+  \item{Do not count during this time}
+  \end{itemize}
+\item{Background Count}
+\item{Eff Count}
+\item{Practice extraction with 400 $\mu$l while doing counts tonight}
+\item{Count $\boxed{8}$}
+\item{Count $\boxed{9}$}
+\item{Count $\boxed{10}$}
 \end{todolist}
+
 
 
 %----------------------------------------------------------------------
