--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -101,6 +101,7 @@
 \newexperiment{ResearchMeeting}{Details from research meeting}
 \newexperiment{Cycle_X3_round_2}{Cycle experiment, round 2,
   replicate of 3}
+\newexperiment{School}{Things to do for school}
 %\newexperiment{shorthand}{Description of the experiment}
 
 %----------------------------------------------------------------------
@@ -1864,15 +1865,116 @@ $\boxed{Stock}$}
   \item{T, Th 1-4 pm, and Wed 2-5, this week and next week}
   \item{Do not count during this time}
   \end{itemize}
-\item{Background Count}
-\item{Eff Count}
+\item[\done]{Background Count}
+\item[\done]{Eff Count}
 \item{Practice extraction with 400 $\mu$l while doing counts tonight}
-\item{Count $\boxed{8}$}
-\item{Count $\boxed{9}$}
+\item[\done]{Count $\boxed{8}$}
+\item[\done]{Count $\boxed{9}$}
 \item{Count $\boxed{10}$}
+  \begin{itemize}
+  \item{Alarm didn't wake me up...didn't count $\boxed{10}$}
+  \end{itemize}
 \end{todolist}
 
+%------------------------------------------------------------------------
+%	LAB BOOK da
+%-----------------------------------------------------------------------
 
+\labday{Tuesday, 8 November 2016}
+
+
+\experiment{Cycle_X3_round_2}
+
+\begin{todolist}
+\item[\done]{Count $\boxed{10}$}
+\item[\done]{Label vials,
+  $\boxed{8\ aq}$,  $\boxed{8\ aq\ C}$,  $\boxed{8\ or}$,
+  $\boxed{8\ or\ C}$
+  $\boxed{9\ aq}$,  $\boxed{9\ aq\ C}$,  $\boxed{9\ or}$,
+  $\boxed{9\ or\ C}$
+  $\boxed{10\ aq}$, $\boxed{10\ aq\ C}$, $\boxed{10\ or}$,
+  $\boxed{10\ or\ C}$ (smaller 2.5 ml tubes)}
+\item[\done]{Label vials $\boxed{8\ mix}$, $\boxed{9\ mix}$,
+  $\boxed{10\ mix}$ (smaller 1 ml tubes from John Burns,
+  have conical bottoms, makes more minute separations easier)}
+\item[\done]{Transfer $\boxed{8}$, $\boxed{9}$, and $\boxed{10}$
+  into glovebox. With:
+  $\boxed{8\ aq}$,  $\boxed{8\ aq\ C}$,  $\boxed{8\ or}$,
+  $\boxed{8\ or\ C}$
+  $\boxed{9\ aq}$,  $\boxed{9\ aq\ C}$,  $\boxed{9\ or}$,
+  $\boxed{9\ or\ C}$
+  $\boxed{10\ aq}$, $\boxed{10\ aq\ C}$, $\boxed{10\ or}$,
+  $\boxed{10\ or\ C}$.
+  (3 clear push caps, and 9 blue
+  push caps). Also with 6 15 ml centrifuge tubes,
+  and $\boxed{8\ mix}$, $\boxed{9\ mix}$,
+  $\boxed{10\ mix}$}
+\item[\done]{Add 400 $\mu$l of $\boxed{TBP}$ to $\boxed{8}$, $\boxed{9}$, and $\boxed{10}$ each}
+\item[\done]{Vortex mix $\boxed{8}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{9}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{10}$ for 15 minutes on pulse mode}
+  \begin{itemize}
+  \item{Switched to push caps for each of the above}
+  \end{itemize}
+\item[\done]{Centrifuge $\boxed{8}$, $\boxed{9}$, and $\boxed{10}$
+  with $\boxed{Buddy}$ on 3300 rpm, for 5 minutes}
+\item[\done]{During the vortex mixing and the centrifuge
+  practice the transfer in the fumehood}
+  \begin{itemize}
+  \item{Was able to get about 395 ml of aqueous phase and 365 ml of
+    organic phase}
+  \end{itemize}
+\item[\done]{Pipette with disposable pipette the aqueous phase
+  first, then the organic (for all three vials),
+  as much as so that there is no mixing.
+  Then transferred the boundary to a smaller vial, centrifuged,
+  and separated further. Counting solutions were
+  also prepared of 250 $\mu$l of each of the solutions
+  \textbf{Should have centrifuged final solutions before this}.
+  A picture will be provided for the whole process for $\boxed{8}$
+  on the following page, below are specific notes about what
+  occured during the experiment.}
+  \begin{itemize}
+  \item{$\boxed{10}$ had to be centrifuged again with $\boxed{Buddy}$
+    (shock the phases too much so they mixed again - accidentally pipetted
+    organic phase during aqueous phase first separation)}
+  \item{$\boxed{9\ mix}$, $\boxed{10\ mix}$ had to be recentrifuged
+    (accidentally dropped these two small(!) vials (no place to put them)}
+  \item{$\boxed{8\ mix}$ Lost a drop while making 250 $\mu$l Aq sample}
+  \item{ $\boxed{9\ mix}$ Lost a drop while making 250 $\mu$l Aq sample}
+  \item{$\boxed{10\ mix}$ Lost a drop while making 250 $\mu$l Aq sample}
+  \end{itemize}
+\item{Measure volumes of everything}
+\item[\done]{Transfer out $\boxed{8\ or\ C}$, $\boxed{8\ aq\ C}$,
+  $\boxed{9\ or\ C}$, $\boxed{9\ aq\ C}$, $\boxed{10\ or\ C}$,
+  $\boxed{10\ aq\ C}$, in 15 ml centrifuge tubes}
+\item[\done]{Radiac wash the above tubes, and store in fumehood behind
+  lead - wait to count (Marianno has an experiment going on)}
+\item[\done]{Clean stuff in glovebox}
+\item[\done]{Start count $\boxed{10\ aq\ C}$ 4:00 pm}
+\item{Start count $\boxed{9\ aq\ C}$ 6:00 pm}
+\item{Start count $\boxed{8\ aq\ C}$ 8:00 pm}
+\item{Start count $\boxed{10\ or\ C}$ 10:00 pm - leave overnight}
+\item[\done]{Create graphic for experiment}
+\end{todolist}
+
+\experiment{School}
+
+\begin{todolist}
+\item{Alpha analysis}
+\item{Respond to McClarren email}
+\item{Review McClarrens notes email}
+\item{Learn how to use ORIGEN}
+\end{todolist}
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+  \includegraphics[width=0.8\linewidth]
+                  {Figures/Cycle_x3_round_2}
+\end{center}
+\caption{Extraction three times round 2 experimental setup}
+\label{fig:example2}
+\end{figure}
 
 %----------------------------------------------------------------------
 %	Examples
