--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -1952,10 +1952,82 @@ $\boxed{Stock}$}
   lead - wait to count (Marianno has an experiment going on)}
 \item[\done]{Clean stuff in glovebox}
 \item[\done]{Start count $\boxed{10\ aq\ C}$ 4:00 pm}
-\item{Start count $\boxed{9\ aq\ C}$ 6:00 pm}
-\item{Start count $\boxed{8\ aq\ C}$ 8:00 pm}
-\item{Start count $\boxed{10\ or\ C}$ 10:00 pm - leave overnight}
+\item[\done]{Start count $\boxed{9\ aq\ C}$ 6:00 pm}
+\item[\done]{Start count $\boxed{8\ aq\ C}$ 8:00 pm}
+\item[\done]{Start count $\boxed{10\ or\ C}$ 10:00 pm - leave overnight}
 \item[\done]{Create graphic for experiment}
+\end{todolist}
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+  \includegraphics[width=0.8\linewidth]
+                  {Figures/Cycle_x3_round_2}
+\end{center}
+\caption{Extraction three times round 2 experimental setup}
+\label{fig:example2}
+\end{figure}
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK da
+%-----------------------------------------------------------------------
+
+\labday{Wednesday, 9 November 2016}
+
+
+\experiment{Cycle_X3_round_2}
+\begin{todolist}
+\item[\done]{Finish count $\boxed{10\ or\ C}$}
+  \begin{itemize}
+  \item{Gave decent results for everything but \tss{137}Cs}
+  \end{itemize}
+\item[\done]{Start count $\boxed{10\ or\ C}$ on face of detector}
+\item[\done]{Finish count $\boxed{10\ or\ C}$}
+\item[\done]{Start count $\boxed{9\ or\ C}$ on face of detector}
+\item[\done]{Analyze results from experiment, display in
+  a single excel sheet}
+  \begin{itemize}
+  \item{Note GENIE corrects for dead time, but if you
+    had to do it by hand, here is the equation for small
+    corrections}
+    \begin{equation*}
+      CPS_f=\frac{CPS_i}{1-\frac{DT}{100}}
+    \end{equation*}
+  \end{itemize}
+\end{todolist}
+
+\experiment{ResearchMeeting}
+\begin{itemize}
+\item{Perfect \tss{137}Cs}
+\item{Fix \tss{154}Eu}
+\item{MARLAP, Stat teaching, look up MDA}
+\item{Submit Degree plan, put a policy course on there}
+\item{Subtracting BK is why I go negative sometimes,
+  another reason for negative values in the D-value is
+  because sometimes I take a difference}
+\item{Covariance data is MT133}
+\end{itemize}
+
+%------------------------------------------------------------------------
+%	LAB BOOK da
+%-----------------------------------------------------------------------
+
+\labday{Thursday, 10 November 2016}
+
+\experiment{Cycle_X3_round_2}
+\begin{todolist}
+\item[\done]{Check if a geometric constant correction factor
+  can be applied for the second geometry}
+  \begin{itemize}
+  \item{It can kind of be applied...but not really}
+  \end{itemize}
+\item[\done]{Looking at CPS for \tss{134}Cs between aqueous
+  before extraction, and after (need to include volumes in
+  calculation because each solution had different volumes)}
+  \begin{itemize}
+  \item{Did calculation for MDA, visually showed why
+    we cant use the information...unless we count for a longer time}
+  \end{itemize}
 \end{todolist}
 
 \experiment{School}
@@ -1967,14 +2039,7 @@ $\boxed{Stock}$}
 \item{Learn how to use ORIGEN}
 \end{todolist}
 
-\begin{figure}[H] % Example of including images
-\begin{center}
-  \includegraphics[width=0.8\linewidth]
-                  {Figures/Cycle_x3_round_2}
-\end{center}
-\caption{Extraction three times round 2 experimental setup}
-\label{fig:example2}
-\end{figure}
+
 
 %----------------------------------------------------------------------
 %	Examples
