--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -2016,6 +2016,8 @@ $\boxed{Stock}$}
 
 \experiment{Cycle_X3_round_2}
 \begin{todolist}
+\item[\done]{Finish count $\boxed{9\ or\ C}$}
+\item[\done]{Start count $\boxed{8\ or\ C}$ on face of detector ($\sim$ 4 pm)}
 \item[\done]{Check if a geometric constant correction factor
   can be applied for the second geometry}
   \begin{itemize}
@@ -2039,6 +2041,28 @@ $\boxed{Stock}$}
 \item{Learn how to use ORIGEN}
 \end{todolist}
 
+
+%------------------------------------------------------------------------
+%	LAB BOOK da
+%-----------------------------------------------------------------------
+
+\labday{Friday, 11 November 2016}
+
+\experiment{Cycle_X3_round_2}
+\begin{todolist}
+\item{Finish count $\boxed{8\ or\ C}$}
+\item{Start Efficiency count on face of detector}
+\end{todolist}
+
+\experiment{School}
+\begin{todolist}
+\item{Find variances}
+\item{Learn how to use ORIGEN, and run it}
+\item{Learn how to change the things in ORIGEN}
+\item{Come up with chaos polynomial plan}
+\item{Do a write up for McClarren...so it looks like
+  I am doing work for his class}
+\end{todolist}
 
 
 %----------------------------------------------------------------------
