--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -737,9 +737,11 @@ There are 6 things to count.
 \begin{center}
 10 $\mu$l of $\boxed{Stock}$ (4 M HNO\tsbs{3})\\
 +\\
-190 $\mu$l of DI water (leftover in glovebox)\\
+\st{190 $\mu$l of DI water (leftover in glovebox)}\\
+990 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-0.2 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{4\ Dillution}$
+\st{0.2 ml of $\sim$ 0 M HNO}\tsbs{3}\st{ $\boxed{4\ Dillution}$}\\
+1 ml of $\sim$ 0 M HNO\tsbs{3} $\rightarrow\boxed{4\ Dillution}$
 \end{center}
 \begin{todolist}
 \item[\done]{Prepare and count alpha sample of Stock}
@@ -2128,8 +2130,17 @@ $\boxed{Stock}$}
   \href{http://www.tandfonline.com/doi/abs/10.1080/07366298508918529}
        {Link}, table from reference below}
 \end{todolist}
+Quick calculation for molarity of uranium in samples
+\begin{align*}
+  \frac{0.0129\ \text{g DUO\tsbs{2}}\cdot 0.88}{0.005\
+    \text{Liters}}=&2.27\\
+  =&2.2704\ \text{M}\cdot \frac{0.5\ ml}{5\ ml}\\
+  =&0.23\ \text{M U}
+\end{align*}
 \begin{table}[H]
 \begin{center}
+\caption{Values from Paper, 1.4 M U (much higher than ours),
+ and 3 M HNO\tsbs{3} (ours is at 4 M)}
 \begin{tabular}{l l}
 \toprule
 Element & D-Value\\ 
@@ -2143,8 +2154,6 @@ Sm & 0.07\\
 Cs & $\boxed{0.01}$\\
 \bottomrule
 \end{tabular}
-\caption{Values from Paper, 1.4 M U (much higher than ours),
- and 3 M HNO\tsbs{3} (ours is at 4 M)}
 \end{center}
 \end{table}  
 \begin{itemize}
@@ -2195,18 +2204,262 @@ Cs & $\boxed{0.01}$\\
 
 \experiment{Cycle_X3_round_2_alpha}
 \begin{todolist}
-\item{Make alpha sample of stock, make 3}
+\item{Label vials: $\boxed{8,9,10\ Dillution}$,
+  $\boxed{8\ aq\ Dillution}$,
+  $\boxed{9\ aq\ Dillution}$,
+  $\boxed{10\ aq\ Dillution}$,
+  $\boxed{8\ or\ Dillution}$,
+  $\boxed{9\ or\ Dillution}$,
+  $\boxed{10\ or\ Dillution}$.
+  Label Chips: $\boxed{8\ Chip}$, $\boxed{9\ Chip}$,
+  $\boxed{10\ Chip}$,
+  $\boxed{8\ aq\ Chip}$, $\boxed{9\ aq\ Chip}$,
+  $\boxed{10\ aq\ Chip}$,
+  $\boxed{8\ or\ Chip}$, $\boxed{8\ or\ Chip}$,
+  $\boxed{10\ or\ Chip}$}
+\item{Transfer all above vials into glovebox}
+\item{Make alpha sample of stock, make 3 (
+      Pipette Errors - assume 20 $\mu$l error 1\%,
+      10 $\mu$l error 1.2\%, 390 $\mu$l error 2\%, 890 $\mu$l error 1\%)}
+\end{todolist}
+\begin{center}
+  10+/-0.12 $\mu$l of $\boxed{Stock\ Add}$ (4 M HNO\tsbs{3})
+  [smaller pipette]\\
++\\
+990+/-9.9 $\mu$l of DI water (leftover in glovebox)\\
+=\\
+1+/-9.9 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8,9,10\ Dillution}$
+\end{center}
+\vspace{0.3cm}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dillution}$ dropped onto
+  $\boxed{8\ Chip}$
+\end{center}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dillution}$ dropped onto
+  $\boxed{9\ Chip}$
+\end{center}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dillution}$ dropped onto
+  $\boxed{10\ Chip}$
+\end{center}
+\begin{todolist}
+
+  
 \item{Make alpha sample of each aqueous}
+\begin{todolist}
+\item{- $\boxed{8\ aq}$}
+\end{todolist}
+\begin{center}
+10+/-0.12 $\mu$l of $\boxed{8\ aq}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
++\\
+390+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+=\\
+0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8\ aq\ Dillution}$
+\end{center}
+\vspace{0.3cm}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{8\ aq\ Dillution}$ dropped onto
+  $\boxed{8\ aq\ Chip}$
+\end{center}
+\begin{todolist}
+\item{- $\boxed{9\ aq}$}
+\end{todolist}
+\begin{center}
+10+/-0.12 $\mu$l of $\boxed{9\ aq}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
++\\
+390+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+=\\
+0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{9\ aq\ Dillution}$
+\end{center}
+\vspace{0.3cm}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{9\ aq\ Dillution}$ dropped onto
+  $\boxed{9\ aq\ Chip}$
+\end{center}
+\begin{todolist}
+\item{- $\boxed{10\ aq}$}
+\end{todolist}
+\begin{center}
+10+/-0.12 $\mu$l of $\boxed{10\ aq}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
++\\
+390+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+=\\
+0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{10\ aq\ Dillution}$
+\end{center}
+\vspace{0.3cm}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{10\ aq\ Dillution}$ dropped onto
+  $\boxed{10\ aq\ Chip}$
+\end{center}
+
+
 \item{Make alpha sample of each organic phase}
+\begin{todolist}
+\item{- $\boxed{8\ or}$}
+\end{todolist}
+\begin{center}
+10+/-0.12 $\mu$l of $\boxed{8\ or}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
++\\
+890+/-8.9 $\mu$l of DI water (leftover in glovebox)\\
+=\\
+0.9+/-0.0089 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8\ or\ Dillution}$
+\end{center}
+\vspace{0.3cm}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{8\ or\ Dillution}$ dropped onto
+  $\boxed{8\ or\ Chip}$
+\end{center}
+\begin{todolist}
+\item{- $\boxed{9\ or}$}
+\end{todolist}
+\begin{center}
+10+/-0.12 $\mu$l of $\boxed{9\ or}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
++\\
+890+/-8.9 $\mu$l of DI water (leftover in glovebox)\\
+=\\
+0.9+/-0.0089 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{9\ or\ Dillution}$
+\end{center}
+\vspace{0.3cm}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{9\ or\ Dillution}$ dropped onto
+  $\boxed{9\ or\ Chip}$
+\end{center}
+\begin{todolist}
+\item{- $\boxed{10\ or}$}
+\end{todolist}
+\begin{center}
+10+/-0.12 $\mu$l of $\boxed{10\ or}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
++\\
+890+/-8.9 $\mu$l of DI water (leftover in glovebox)\\
+=\\
+0.9+/-0.0089 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{10\ or\ Dillution}$
+\end{center}
+\vspace{0.3cm}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{10\ or\ Dillution}$ dropped onto
+  $\boxed{10\ or\ Chip}$
+\end{center}
 \end{todolist}
 
 \experiment{Process_X3}
 \begin{todolist}
 \item{Combine all aqueous phases together}
-\item{Contact all aqueous phases with second organic phase}
-\item{do separation}
+  \begin{todolist}
+  \item{$\boxed{8\ aq\ C}\ \rightarrow\ \boxed{8\ aq}$ (take all of first
+  and add to second)}
+  \item{$\boxed{9\ aq\ C}\ \rightarrow\ \boxed{9\ aq}$}
+  \item{$\boxed{10\ aq\ C}\ \rightarrow\ \boxed{10\ aq}$}
+  \end{todolist}
+\item{Measure volumes of all aqueous phases}
+\begin{table}[H]
+  \begin{center}
+    \caption{Volumes for combined aqueous phases}
+    \begin{tabular}{l l l}
+      \toprule
+      Series & Aqueous (8,9, or 10)\\ 
+      8 & \\
+      9 & \\
+      10 & \\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table}  
 \end{todolist}
 
+Second Contact...
+
+\begin{todolist}
+\item{Label vials,
+  $\boxed{8\ aqII}$,  $\boxed{8\ aqII\ C}$,  $\boxed{8\ orII}$,
+  $\boxed{8\ orII\ C}$
+  $\boxed{9\ aqII}$,  $\boxed{9\ aqII\ C}$,  $\boxed{9\ orII}$,
+  $\boxed{9\ orII\ C}$
+  $\boxed{10\ aqII}$, $\boxed{10\ aqII\ C}$, $\boxed{10\ orII}$,
+  $\boxed{10\ orII\ C}$ (smaller 2.5 ml tubes)}
+\item{Will reuse $\boxed{8\ mix}$, $\boxed{9\ mix}$,
+  $\boxed{10\ mix}$ (smaller 1 ml tubes from John Burns,
+  have conical bottoms, makes more minute separations easier)}
+\item{Transfer:
+  $\boxed{8\ aqII}$,  $\boxed{8\ aqII\ C}$,  $\boxed{8\ orII}$,
+  $\boxed{8\ orII\ C}$
+  $\boxed{9\ aqII}$,  $\boxed{9\ aqII\ C}$,  $\boxed{9\ orII}$,
+  $\boxed{9\ orII\ C}$
+  $\boxed{10\ aqII}$, $\boxed{10\ aqII\ C}$, $\boxed{10\ orII}$,
+  $\boxed{10\ orII\ C}$.
+  (3 clear push caps, and 9 blue
+  push caps). Also with 6 15 ml centrifuge tubes}
+\item{Add 400 $\mu$l of $\boxed{TBP}$ to $\boxed{8}$, $\boxed{9}$, and $\boxed{10}$ each}
+\item{Vortex mix $\boxed{8}$ for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{9}$ for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{10}$ for 15 minutes on pulse mode}
+  \begin{itemize}
+  \item{Switched to push caps for each of the above}
+  \end{itemize}
+\item{Centrifuge $\boxed{8}$, $\boxed{9}$, and $\boxed{10}$
+  with $\boxed{Buddy}$ on 3300 rpm, for 5 minutes}
+\item{During the vortex mixing and the centrifuge
+  practice the transfer in the fumehood}
+  \begin{itemize}
+  \item{Was able to get about XX ml of aqueous phase and XX ml of
+    organic phase}
+  \end{itemize}
+\item{Pipette with disposable pipette the aqueous phase
+  first, then the organic (for all three vials),
+  as much as so that there is no mixing.
+  Then transferred the boundary to a smaller vial, centrifuged,
+  and separated further. Counting solutions were
+  also prepared of 250 $\mu$l of each of the solutions
+  \textbf{Remember to centrifuge}.
+  A picture will be provided for the whole process for $\boxed{8}$
+  on the following page \textbf{Modify picture for this provess}
+  , below are specific notes about what
+  occured during the experiment.}
+  \begin{itemize}
+  \item{-}
+  \vspace{3cm}
+  \end{itemize}
+\item{Measure volumes of everything}
+\item{Transfer out $\boxed{8\ orII\ C}$, $\boxed{8\ aqII\ C}$,
+  $\boxed{9\ orII\ C}$, $\boxed{9\ aqII\ C}$, $\boxed{10\ orII\ C}$,
+  $\boxed{10\ aqII\ C}$, in 15 ml centrifuge tubes}
+\item{Radiac wash the above tubes, and store in fumehood behind
+  lead - wait to count}
+\item{Clean stuff in glovebox}
+\item{Start count XXXXX ?? pm}
+\end{todolist}
+
+
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+  \includegraphics[width=0.8\linewidth]
+                  {Figures/Cycle_x3_round_2}
+\end{center}
+\caption{Extraction three times round 2 experimental setup}
+\label{fig:example2}
+\end{figure}
+
+
+
+\experiment{Cycle_X3_round_2}
+\begin{todolist}
+\item{Finish Eff Count}
+\item{Start $\boxed{8\ or}$ count}
+\end{todolist}
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Wednesday, 16 November 2016}
+
+\experiment{ResearchMeeting}
+
+\begin{itemize}
+\item{Just present D-Values at research meeting}
+\end{itemize}
 
 %----------------------------------------------------------------------
 %	Examples
