--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -102,7 +102,7 @@
 \newexperiment{Cycle_X3_round_2}{Cycle experiment, round 2,
   replicate of 3}
 \newexperiment{Cycle_X3_round_2_alpha}{Cycle experiment, round 2,
-  replicate of 3, ALPHA preparation}
+  replicate of 3, ALPHA preparation (also Mass Spec preparation}
 \newexperiment{Process_X3}{Process Experiment (continuation from
   cycle experiment)}
 \newexperiment{School}{Things to do for school}
@@ -2027,7 +2027,7 @@ $\boxed{Stock}$}
 \item[\done]{Check if a geometric constant correction factor
   can be applied for the second geometry}
   \begin{itemize}
-  \item{It can kind of be applied...but not really}
+  \item{It can kind of be applied...\st{but not really}}
   \end{itemize}
 \item[\done]{Looking at CPS for \tss{134}Cs between aqueous
   before extraction, and after (need to include volumes in
@@ -2042,9 +2042,9 @@ $\boxed{Stock}$}
 
 \begin{todolist}
 \item{Alpha analysis}
-\item{Respond to McClarren email}
-\item{Review McClarrens notes email}
-\item{Learn how to use ORIGEN}
+\item{Respond to McClarren email - did this weekend}
+\item{Review McClarrens notes email - did this weekend}
+\item{Learn how to use ORIGEN - did this weekend}
 \end{todolist}
 
 
@@ -2056,8 +2056,8 @@ $\boxed{Stock}$}
 
 \experiment{Cycle_X3_round_2}
 \begin{todolist}
-\item{Finish count $\boxed{8\ or\ C}$}
-\item{Start Efficiency count on face of detector}
+\item[\done]{Finish count $\boxed{8\ or\ C}$}
+\item[\done]{Start Efficiency count on face of detector}
 \end{todolist}
 
 \experiment{School}
@@ -2088,8 +2088,8 @@ $\boxed{Stock}$}
   \item{The other results had higher D-values across the board
     maybe due to geometric differences, maybe not}
   \end{itemize}
-\item[\done]{Counted $\boxed{8\ or\ C}$, $\boxed{9\ or\ C}$,
-  and $\boxed{10\ or\ C}$ on the face of the detector (only needed
+\item[\done]{Counted $\boxed{8\ aq\ C}$, $\boxed{9\ aq\ C}$,
+  and $\boxed{10\ aq\ C}$ on the face of the detector (only needed
   to count each like 10 minutes or so (40\% dead time)}
   \begin{itemize}
   \item{To check and see if geometry is the issue (although these
@@ -2199,12 +2199,15 @@ Cs & $\boxed{0.01}$\\
   \item{Looking into the count rates, some peaks change by
     alot between the first and second count of $\boxed{10\ or\ C}$
     and the second...WHY!?}
+  \item{Maybe because some aqueous was in the original sample
+    $\boxed{10\ or}$, and because it had some time to dissolve into
+    the solution, the activities for the lower D materials increased}
   \end{itemize}
 \end{todolist}
 
 \experiment{Cycle_X3_round_2_alpha}
 \begin{todolist}
-\item{Label vials: $\boxed{8,9,10\ Dillution}$,
+\item[\done]{Label vials: $\boxed{8,9,10\ Dillution}$,
   $\boxed{8\ aq\ Dillution}$,
   $\boxed{9\ aq\ Dillution}$,
   $\boxed{10\ aq\ Dillution}$,
@@ -2217,7 +2220,51 @@ Cs & $\boxed{0.01}$\\
   $\boxed{10\ aq\ Chip}$,
   $\boxed{8\ or\ Chip}$, $\boxed{8\ or\ Chip}$,
   $\boxed{10\ or\ Chip}$}
-\item{Transfer all above vials into glovebox}
+  \begin{todolist}
+  \item[\done]{Also transfer 3 red and 4 blue push caps for smaller vials}
+  \end{todolist}
+\item[\done]{Transfer all above vials and chips into glovebox}
+\end{todolist}
+
+\experiment{Cycle_X3_round_2}
+
+\begin{todolist}
+\item[\done]{Finish Eff count}
+  \begin{itemize}
+  \item{Rework calculations with new eff...didn't help much}
+  \end{itemize}
+\item[\done]{Start $\boxed{8\ or}$ count}
+\item[\done]{Spend all night making spreadsheet to calculate
+  how much volume would be optimal for contamination in
+  each series}
+  \begin{itemize}
+  \item{It made things kind of work better, but not a whole lot better}
+  \item{Reason why I haven't averaged numbers yet...was taking a
+    26 counting efficency, counted most of the day}
+  \item{Also determined geometric differences between calculating
+    activity at 0 cm as opposed to 26 cm - there wasn't much
+    of a difference}
+  \end{itemize}
+\end{todolist}
+
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK da
+%-----------------------------------------------------------------------
+
+\labday{Wednesday, 15 November 2016}
+
+\experiment{Cycle_X3_round_2}
+
+\begin{todolist}
+\item[\done]{Begin count $\boxed{9\ or}$}
+\end{todolist}
+
+
+\experiment{Cycle_X3_round_2_alpha}
+
+\begin{todolist}
 \item{Make alpha sample of stock, make 3 (
       Pipette Errors - assume 20 $\mu$l error 1\%,
       10 $\mu$l error 1.2\%, 390 $\mu$l error 2\%, 890 $\mu$l error 1\%)}
@@ -2459,6 +2506,7 @@ Second Contact...
 
 \begin{itemize}
 \item{Just present D-Values at research meeting}
+\item{Things didn't add up so well}
 \end{itemize}
 
 %----------------------------------------------------------------------
